feat: restructured the functionality of reciving and sending files
