# FileStorage/Application.contract/SaveFile/save_file_request.go
@@ -1,7 +1,8 @@
 package contract
 
+import "mime/multipart"
+
 type SaveFileRequest struct {
-	OwnerID  string `json:"owner_id"`
-	FileName string `json:"file_name"`
-	Content  []byte `json:"content"`
+	OwnerID string                `json:"owner_id"`
+	File    *multipart.FileHeader `json:"file"`
 }
