# FileStorage/Application/queries/get_file/get_file_querry_handler.go
@@ -4,7 +4,9 @@ package queries
 import (
 	"context"
 	contract "file-storage/Application.contract/GetFile"
+	"file-storage/Domain/models"
 	"file-storage/Domain/repository_interfaces"
+	"path/filepath"
 )
 
 type GetFileQueryHandler struct {
@@ -17,18 +19,26 @@ func NewGetFileQueryHandler(fileRepo repository_interfaces.FileRepository) *GetF
 	}
 }
 
-func (cmd *GetFileQueryHandler) Execute(query GetFileQuery) (contract.GetFileResponse, error) {
+func (cmd *GetFileQueryHandler) Execute(query GetFileQuery) (contract.GetFileResponse, *models.FileStream, *string, error) {
 	file, err := cmd.fileRepo.GetFileByID(context.Background(), query.FileID)
 	if err != nil {
 		return contract.GetFileResponse{
 			Title:   "StatusNotFound",
 			Message: "File not found",
-		}, err
+		}, nil, nil, err
 	}
 
-	return contract.GetFileResponse{
+	fileExtension := filepath.Ext(file.FileName)
+	if fileExtension == "" {
+		return contract.GetFileResponse{
+			Title:   "StatusBadRequest",
+			Message: "File must have a valid extension",
+		}, nil, nil, err
+	}
+	resp := contract.GetFileResponse{
 		Title:   "StatusOK",
 		Message: "File retrieved successfully",
-		File:    file,
-	}, nil
+	}
+
+	return resp, &file, &fileExtension, nil
 }
