# FileStorage/Domain/models/file_stream_content.go
@@ -1,0 +1,10 @@
+package models
+
+import "go.mongodb.org/mongo-driver/mongo/gridfs"
+
+type FileStream struct {
+	OwnerID  string
+	FileName string
+	FileSize int64
+	Stream   *gridfs.DownloadStream
+}
